NOBODY WILL UNDERSTAND THE PAIN AND SUFFERING OF 20 VERSIONS< LOOK AT THE VERSION HISTORY AND SEE ALL THE MANUAL CHANGES I DID TO BASH MY HEAD AGAINST THE BUNDLER,THE FIX WAS TO RAW DOG JS

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nextauth-clerk-migration-package",
-  "version": "0.1.4",
+  "version": "0.1.26",
   "type": "module",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "files": [
+    "dist"],
   "dependencies": {
     "@clerk/nextjs": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
